--- a/Daejeong/0927/baekjoon_1235.ipynb
+++ b/Daejeong/0927/baekjoon_1235.ipynb
@@ -3,15 +3,36 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 백준(1620번/실버4) : 나는야 포켓몬 마스터 이다솜 / [문제 링크](https://www.acmicpc.net/problem/1620)"
+    "## 백준(1235번/실버4) : 학생 번호 / [문제 링크](https://www.acmicpc.net/problem/1235)"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [],
-   "outputs": [],
+   "source": [
+    "case = int(input())\r\n",
+    "stu_nums = [input() for _ in range(case)]\r\n",
+    "\r\n",
+    "# 자리수 만큼 반복\r\n",
+    "for i in range(1, len(stu_nums[0]) + 1):\r\n",
+    "    # 최소 자리수를 비교하기위해 슬라이싱을통해 비교\r\n",
+    "    check_list = [stu_num[-i:] for stu_num in stu_nums]\r\n",
+    "    \r\n",
+    "    # 만약 중복이 없을때, 해당 i가 정답 아니면 슬라이싱을 늘려가면서 반복 진행\r\n",
+    "    if len(check_list)==len(set(check_list)):\r\n",
+    "        print(i)\r\n",
+    "        break"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
