--- a/Daejeong/0916/baekjoon_1018.ipynb
+++ b/Daejeong/0916/baekjoon_1018.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "source": [
     "def check_board(base_board, input_board):\r\n",
     "    change_total = 0\r\n",
@@ -35,18 +35,14 @@
     "            if change_total < final_total:\r\n",
     "                final_total = change_total\r\n",
     "\r\n",
-    "print(final_total)\r\n"
+    "print(final_total)"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "check_board() missing 1 required positional argument: 'change_total'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-2542ce310fd0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m         \u001b[0mchange_total\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcheck_board\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbase_board\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_board\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mchange_total\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mfinal_total\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: check_board() missing 1 required positional argument: 'change_total'"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0\n"
      ]
     }
    ],
@@ -54,37 +50,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "source": [
-    "def check_board(input_board):\r\n",
-    "    change_total = 0\r\n",
-    "\r\n",
-    "    for idx1, i in enumerate(input_board):\r\n",
-    "        for j in range(len(i)-7):\r\n",
-    "            floor = i[j:j+7]\r\n",
-    "            for idx2, k in enumerate(floor):\r\n",
-    "                if idx1 % 2 == 0:\r\n",
-    "                    if idx2 % 2 == 0:\r\n",
-    "                        if k != 'W': change_total += 1\r\n",
-    "                    else:\r\n",
-    "                        if k != 'B': change_total += 1\r\n",
-    "                else:\r\n",
-    "                    if idx2 % 2 == 0:\r\n",
-    "                        if k != 'B': change_total += 1\r\n",
-    "                    else:\r\n",
-    "                        if k != 'W': change_total += 1\r\n",
-    "\r\n",
-    "    return change_total\r\n",
-    "\r\n",
     "N, M = map(int, input().split())\r\n",
     "input_board = [input() for _ in range(N)]\r\n",
     "\r\n",
     "final_total = []\r\n",
-    "for i in range(len(input_board)-7):\r\n",
-    "    test_board = input_board[i:7+i]\r\n",
-    "    change_total = check_board(test_board)\r\n",
-    "    final_total.append(change_total)\r\n",
+    "# 입력값을 8*8 형태로 자르는 반복문\r\n",
+    "for i in range(N-7):\r\n",
+    "    for j in range(M-7):\r\n",
+    "        # 백이 먼저일때, 흑이 먼저일때 변경 횟수를 담은 변수 2개 생성\r\n",
+    "        change_total1 = 0\r\n",
+    "        change_total2 = 0\r\n",
+    "        for a in range(i, i+8):\r\n",
+    "            for b in range(j, j+8):\r\n",
+    "                # 합이 짝수일때, (1, 1)(1, 3) => 같은색\r\n",
+    "                if (a + b) % 2 == 0:\r\n",
+    "                    if input_board[a][b] != \"W\": change_total1 += 1\r\n",
+    "                    if input_board[a][b] != \"B\": change_total2 += 1\r\n",
+    "                    \r\n",
+    "                # 합이 홀수일때, (1, 2)(1, 4) => 같은색\r\n",
+    "                else:\r\n",
+    "                    if input_board[a][b] != \"B\": change_total1 += 1\r\n",
+    "                    if input_board[a][b] != \"W\": change_total2 += 1\r\n",
     "\r\n",
+    "        final_total.append(change_total1)\r\n",
+    "        final_total.append(change_total2)\r\n",
+    "\r\n",
+    "# 여기서 최솟값 출력\r\n",
     "print(min(final_total))"
    ],
    "outputs": [
@@ -92,7 +85,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "50\n"
+      "4\n"
      ]
     }
    ],
@@ -100,8 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "source": [
+    "# 이거 구글링의 결과\r\n",
     "n, m = map(int, input().split())\r\n",
     "l = [input() for _ in range(n)]\r\n",
     "result = []\r\n",
@@ -127,12 +121,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "BWBWBW\n",
-      "BWBWBW\n",
-      "BWBWBW\n",
-      "BWBWBW\n",
-      "BWBWBW\n",
-      "BWBWBW\n"
+      "32\n"
      ]
     }
    ],
