--- a/Daejeong/1008/baekjoon_5567.ipynb
+++ b/Daejeong/1008/baekjoon_5567.ipynb
@@ -40,106 +40,19 @@
     "\r\n",
     "print(count)"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# 구글링한건데 이것도 틀렸데\r\n",
-    "import sys\r\n",
-    "input = sys.stdin.readline\r\n",
-    "\r\n",
-    "if __name__ == \"__main__\":\r\n",
-    "    N = int(input())\r\n",
-    "    m = int(input())\r\n",
-    "    friend = dict()\r\n",
-    "\r\n",
-    "    for i in range(1, N+1) :\r\n",
-    "        friend[i] = []\r\n",
-    "    \r\n",
-    "    for _ in range(m) :\r\n",
-    "        a, b = map(int, input().split(\" \"))\r\n",
-    "        friend[a].append(b)\r\n",
-    "        friend[b].append(a)\r\n",
-    "    \r\n",
-    "    ans_set = set(friend[1])\r\n",
-    "    for i in friend[1] :\r\n",
-    "        ans_set.update(friend[i])\r\n",
-    "    print(len(ans_set) - 1)"
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-1b0612b05660>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mN\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mM\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mis_friend\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mN\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mN\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mcount\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# 이것도 틀렸데\r\n",
-    "import sys\r\n",
-    "input = sys.stdin.readline\r\n",
-    "\r\n",
-    "n = int(input())\r\n",
-    "m = int(input())\r\n",
-    "res = dict()\r\n",
-    "resSet = set()\r\n",
-    "\r\n",
-    "for _ in range(m):\r\n",
-    "    key, item = map(int, input().split())\r\n",
-    "    if key not in res:\r\n",
-    "        res[key] = list()\r\n",
-    "    if item not in res:\r\n",
-    "        res[item] = list()\r\n",
-    "    res[key].append(item)\r\n",
-    "    res[item].append(key)\r\n",
-    "    \r\n",
-    "for key in res[1]:\r\n",
-    "    resSet.add(key)\r\n",
-    "    if key not in res:\r\n",
-    "        continue\r\n",
-    "    else:\r\n",
-    "        for item in res[key]:\r\n",
-    "            resSet.add(item)\r\n",
-    "\r\n",
-    "print(len(resSet) - 1)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# 이것도 틀림\r\n",
-    "n = int(input())\r\n",
-    "m = int(input())\r\n",
-    "\r\n",
-    "arr = dict()\r\n",
-    "friend = []\r\n",
-    "\r\n",
-    "\r\n",
-    "for i in range(m):\r\n",
-    "    x, y = map(int, input().split())\r\n",
-    "    if x not in arr:\r\n",
-    "        arr[x] = list()\r\n",
-    "    if y not in arr:\r\n",
-    "        arr[y] = list()\r\n",
-    "    arr[x].append(y)\r\n",
-    "    arr[y].append(x)\r\n",
-    "\r\n",
-    "    \r\n",
-    "for i in arr[1]:\r\n",
-    "    friend.append(i)\r\n",
-    "    if i in arr:\r\n",
-    "        for j in arr[i]:\r\n",
-    "            friend.append(j)\r\n",
-    "            \r\n",
-    "friend = set(friend)\r\n",
-    "\r\n",
-    "print(len(friend) - 1)"
-   ],
-   "outputs": [],
    "metadata": {}
   },
   {
