--- a/Daejeong/1029/baekjoon_2805.ipynb
+++ b/Daejeong/1029/baekjoon_2805.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26,41 +26,37 @@
     }
    ],
    "source": [
+    "# 일단 되긴했는데 왜 pypy3는 되고 python3는 안될까...\n",
+    "# 분명 이것보다 더 효율적으로 할 수 있을껀데\n",
     "import sys\n",
     "\n",
-    "def get_higher_trees(array, target):\n",
-    "    mid = len(array) // 2\n",
+    "N, M = map(int, sys.stdin.readline().split()) # 나무 수, 필요한 나무 길이\n",
+    "trees = list(map(int, sys.stdin.readline().split()))\n",
     "\n",
-    "    if array[mid] >= target:\n",
-    "        while array[mid] <= target:\n",
-    "            print(1)\n",
-    "            mid -= 1\n",
-    "    else:\n",
-    "        print(2)\n",
-    "        return get_higher_trees(array[mid:], target)\n",
+    "start, end = 0, max(trees) # 시작 점, 끝점\n",
     "\n",
-    "    return array[mid:]\n",
+    "# 이분 탐색\n",
+    "while start <= end:\n",
+    "    mid = (start+end) // 2\n",
+    "    tree = 0 # 잘린 나무 합\n",
+    "    for i in trees:\n",
+    "        if i > mid: # mid보다 큰 나무 높이는 잘림\n",
+    "            tree += i - mid\n",
     "\n",
-    "\n",
-    "n, m = map(int, input().split())\n",
-    "heights = sorted(list(map(int, input().split())))\n",
-    "\n",
-    "higher_heights = get_higher_trees(heights, m)\n",
-    "print(higher_heights)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#n, m = map(int, sys.stdin.readline().split())\n",
-    "#heights = sorted(list(map(int, sys.stdin.readline().split())))\n"
+    "    if tree >= M: # 원하는 나무 높이보다 더 많이 잘렸으면\n",
+    "        start = mid + 1\n",
+    "    else: # 원하는 나무 높이보다 덜 잘렸으면\n",
+    "        end = mid - 1\n",
+    "print(end)"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 64-bit",
+   "display_name": "Python 3.8.3 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -73,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
