--- a/Daejeong/1115/baekjoon_10026.ipynb
+++ b/Daejeong/1115/baekjoon_10026.ipynb
@@ -21,7 +21,10 @@
     }
    ],
    "source": [
-    "n = int(input())\n",
+    "import heapq, sys\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "\n",
+    "n = int(sys.stdin.readline())\n",
     "\n",
     "dx = [0, -1, 0, 1]\n",
     "dy = [1, 0, -1, 0]\n",
@@ -37,7 +40,7 @@
     "            if not visited[nx][ny] and board[nx][ny] in color:\n",
     "                dfs(nx, ny, color)\n",
     "\n",
-    "board = [input() for _ in range(n)]\n",
+    "board = [sys.stdin.readline() for _ in range(n)]\n",
     "visited = [[False]*n for _ in range(n)]\n",
     "colors = []\n",
     "# answer1 = 정상인 구분\n",
