--- a/Daejeong/1115/baekjoon_10026.ipynb
+++ b/Daejeong/1115/baekjoon_10026.ipynb
@@ -21,7 +21,7 @@
     }
    ],
    "source": [
-    "import heapq, sys\n",
+    "import sys\n",
     "sys.setrecursionlimit(10**6)\n",
     "\n",
     "n = int(sys.stdin.readline())\n",
