--- a/Daejeong/1018/programmers_9.ipynb
+++ b/Daejeong/1018/programmers_9.ipynb
@@ -34,17 +34,25 @@
     }
    ],
    "source": [
-    "#효율성 테스트때문에 말아먹은 문제 젠장...\n",
-    "#어떻게 이거보다 더 효율적으로 짤수있을까...\n",
     "def solution(participant, completion):\n",
     "    answer= ''\n",
+    "                \n",
+    "    participant.sort()\n",
+    "    completion.sort()\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    for idx, c in enumerate(completion):\n",
+    "        if participant[idx] != c:\n",
+    "            return participant[idx]\n",
+    "    \n",
+    "    return participant[-1]\n",
+    "    \"\"\"\n",
+    "    \n",
     "    for p in participant:\n",
     "        try:\n",
     "            completion.remove(p)\n",
     "        except:\n",
-    "            answer = p\n",
-    "            break  \n",
-    "    return answer"
+    "            return p"
    ]
   }
  ],
