--- a/Daejeong/1020/programmers_10.ipynb
+++ b/Daejeong/1020/programmers_10.ipynb
@@ -18,7 +18,10 @@
     "    if len(set(nums)) < returns:\n",
     "        return len(set(nums))\n",
     "        \n",
-    "    return returns"
+    "    return returns\n",
+    "\n",
+    "def solution(ls):\n",
+    "    return min(len(ls)/2, len(set(ls)))"
    ]
   }
  ],
