--- a/Daejeong/1025/baekjoon_11942.ipynb
+++ b/Daejeong/1025/baekjoon_11942.ipynb
@@ -1,18 +1,50 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
+    "## 백준(11942번/브론즈5/구현) : 고려대는 사랑입니다 / [문제 링크](https://www.acmicpc.net/problem/11942)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "고려대학교\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 그냥 꿀빠려고 푼 문제\n",
     "print('고려대학교')"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
   },
   "orig_nbformat": 4
  },
